--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,14 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css"
+    />
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
@@ -21,7 +27,7 @@
   </head>
   <body>
     <div id="backdrop"></div>
-    {% block main %}{% endblock %} {% block script_action %}{% endblock %}
+    {% block main %}{% endblock %} {% block script_action %}{% endblock %}        
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -29,13 +35,14 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery.ba-throttle-debounce.min.js')}}"></script>
     <script
-      src="{{ url_for('static', filename='js/jquery.ba-throttle-debounce.min.js')}}"
+      src="{{ url_for('static', filename='js/util.js')}}"
     ></script>
     <script
       type="module"
       src="{{ url_for('static', filename='js/index.js')}}"
-    ></script>
+    ></script>    
   </body>
 </html>
