--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -25,8 +25,13 @@
             >
           </li>
           <li>
-            <a class="dropdown-item" href="#"
-              ><i class="fas fa-sliders-h"></i> Configurações</a
+            <a
+              id="lkAlterarSenha"
+              class="dropdown-item"
+              href="javascript:void(0)"
+              data-bs-toggle="modal"
+              data-bs-target="#staticBackdrop"
+              ><i class="fas fa-sliders-h"></i> Alterar senha</a
             >
           </li>
           <li>
