Correção do bug #74 - Problema na paginação do cadastro de casais no encontro.

--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -6,7 +6,7 @@ main %}
     class="row justify-content-center align-items-center"
   >
     <div class="p-4 col-sm-4 shadow-lg">
-      <h2 class="mb-5 text-center fs-1">Sistema XYZ</h2>
+      <h2 class="mb-5 text-center fs-1">Gestor Paroquial</h2>
       <form
         action="{{ url_for('authentication.login') }}"
         method="post"
