--- a/server/app/templates/casal/index.html
+++ b/server/app/templates/casal/index.html
@@ -93,7 +93,7 @@
       {% if page.has_prev %}
       <a
         class="page-link"
-        href="/pages{{ url_for('casal.index', page=page.page-1, per_page=10)}}"
+        href="{{ page_link }}?page={{ page.page-1 }}&per_page=10"
         aria-label="Previous"
         data-link
       >
@@ -110,7 +110,7 @@
     {% else %}
     <li class="page-item">
       <a
-        href="/pages{{ url_for('casal.index', page=i+1, per_page=10) }}"
+        href="{{ page_link }}?page={{ i+1 }}&per_page=10"
         class="page-link"
         data-link
         >{{ i + 1 }}</a
@@ -121,7 +121,7 @@
       {% if page.has_next %}
       <a
         class="page-link"
-        href="/pages{{ url_for('casal.index', page=page.page+1, per_page=10)}}"
+        href="{{ page_link }}?page={{ page.page+1 }}&per_page=10"
         aria-label="Next"
         data-link
       >
