Alterações para consertar paginação.

--- a/server/app/templates/movimento/index.html
+++ b/server/app/templates/movimento/index.html
@@ -35,7 +35,7 @@
       <td>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ url_for('movimento.edit', id=movimento.id) }}"
+          href="/pages{{ url_for('movimento.edit', id_movimento=movimento.id) }}"
           data-link
         >
           <i class="fas fa-pen"></i>
