--- a/server/app/templates/casal/index.html
+++ b/server/app/templates/casal/index.html
@@ -1,3 +1,4 @@
+{% import 'macros/pagination.html' as macros %}
 <div class="d-flex justify-content-between">
   <h2 class="fs-4">Casais Cadastrados</h2>
   <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
@@ -71,7 +72,7 @@
       <td>
         <a
           class="btn btn-sm icon-link icon-link-hover"
-          href="/pages{{ edit_link }}/{{ casal.id }}"
+          href="/pages{{ edit_link }}/{{ casal.hashid }}"
           data-link
         >
           <i class="fas fa-pen"></i>
@@ -86,54 +87,7 @@
   <h1>Nenhum dado encontrado...</h1>
 </div>
 {% endif %}
-<nav aria-label="Navegação da página">
-  <ul class="pagination justify-content-center">
-    <li class="page-item">
-      {% if page.has_prev %}
-      <a
-        class="page-link"
-        href="{{ page_link }}?page={{ page.page-1 }}&per_page=10"
-        aria-label="Previous"
-        data-link
-      >
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-      {% else %}
-      <a class="page-link disabled" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-      {% endif %}
-    </li>
-    {% for i in range(page.pages) %} {% if i + 1 == page.page %}
-    <li class="page-item active"><span class="page-link">{{ i + 1 }}</span></li>
-    {% else %}
-    <li class="page-item">
-      <a
-        href="{{ page_link }}?page={{ i+1 }}&per_page=10"
-        class="page-link"
-        data-link
-        >{{ i + 1 }}</a
-      >
-    </li>
-    {% endif %} {% endfor %}
-    <li class="page-item">
-      {% if page.has_next %}
-      <a
-        class="page-link"
-        href="{{ page_link }}?page={{ page.page+1 }}&per_page=10"
-        aria-label="Next"
-        data-link
-      >
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-      {% else %}
-      <a class="page-link disabled" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-      {% endif %}
-    </li>
-  </ul>
-</nav>
+{{ macros.pagination_widget(page) }}
 <script>
   const frmPesquisaCasais = document.getElementById("frmPesquisa");
 
