Colocando tooltips e novo formato de aceite de equipe.

--- a/server/app/templates/casal/index.html
+++ b/server/app/templates/casal/index.html
@@ -72,6 +72,7 @@
       <td>
         <a
           class="btn btn-sm icon-link icon-link-hover"
+          data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Editar casal"
           href="/pages{{ edit_link }}/{{ casal.hashid }}"
           data-link
         >
