--- a/server/app/templates/movimento/equipe_montagem.html
+++ b/server/app/templates/movimento/equipe_montagem.html
@@ -27,7 +27,7 @@
     ></a>
   </div>
 </nav>
-<div class="row">
+<div class="row mb-3">
   <div class="col-md-6">
     <h4>Casais Participantes</h4>
     <input
@@ -170,9 +170,6 @@
           listaIncluidos.empty();
           $.each(response, function (key, value) {
             const checked = value.coordenador ? "checked" : "";
-            const aceito = value.aceito
-              ? '<span class="badge bg-success">Aceito</span>'
-              : '<span class="badge bg-danger">Não aceito</span>';
             listaIncluidos.append(
               `<li class="list-group-item d-flex justify-content-between align-items-center" value="${
                 value.id
@@ -185,11 +182,14 @@
               }" id="firstRadio" ${checked}>
                   <span>${value.nome}</span>
                 </div>
-                ${aceito}
+                <div class="form-check form-switch">
+                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" ${value.aceito ? "checked" : ""}>
+                  <label class="form-check-label" for="flexSwitchCheckChecked">Aceitou</label>
+                </div>
               </li>`
             );
           });
-          listaIncluidos.find("input").change(changeRadio);
+          listaIncluidos.find("[type=radio]").change(changeRadio);
         });
       } else {
         $("#lstCasaisIncluidos").empty();
