--- a/server/app/templates/usuario/index.html
+++ b/server/app/templates/usuario/index.html
@@ -56,6 +56,7 @@
         <td>
           <a
             class="btn btn-sm icon-link icon-link-hover"
+            data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Editar usuário"
             href="/pages{{ url_for('usuario.editar', id_usuario=usuario.id) }}"
             data-link
           >
